--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,17 @@
 # Created by https://www.gitignore.io/api/python,windows,pycharm
 # Edit at https://www.gitignore.io/?templates=python,windows,pycharm
 
+*.ini
+*.kra
+*.kra~
+*.apk
+
 ### PyCharm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+
+.idea/**/*.xml
+.idea/*.iml
 
 # User-specific stuff
 .idea/**/workspace.xml
