--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.kra
 *.kra~
 *.apk
+bin/
 
 ### PyCharm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
